@@ -1,3 +1,5 @@
+############2015-10-07#####################
+alter table supply_chain_stats_daily add return_pro int(11) default 0;
 ############2015-10-30###################
 alter table pay_coupon_template add use_fee double Not null;
 ########### 2015-10-24########### 2015-10-28 ################# #################
